--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -38,6 +38,7 @@
                 <a class="btn btn-primary" href="reservar_organizador.html">Reservar Entradas <span class="glyphicon glyphicon-flag"></span></a>
                 <a class="btn btn-warning" onclick="redirigePostergar()">Postergar <span class="glyphicon glyphicon-calendar"></span></a>
                 <a class="btn btn-warning" onclick="redirigeCancelar()">Cancelar <span class="glyphicon glyphicon-remove-sign"></span></a>
+                <a class="btn btn-success" onclick="redirigeReservaOrganizador()">Reserva Organizador </a>
             </div>
         </div>
         <div class="col-md-2 col-sm-12" style="text-align:center">
@@ -432,6 +433,16 @@
         var evento = $('#idEventoT').val();
         if (evento != "") {
             window.location.href = '/Evento/ModificarEvento?evento=' + evento;
+        } else {
+            alert("Seleccione un evento");
+            evento = "";
+        }
+    }
+
+    function redirigeReservaOrganizador() {
+        var evento = $('#idEventoT').val();
+        if (evento != "") {
+            window.location.href = '/Evento/VerEvento?id=' + evento;
         } else {
             alert("Seleccione un evento");
             evento = "";
