Busqueda devoluciones ya no muestra las postergaciones q no se puedan dev. Modificación del view VerDetalle de devoluciones

--- a/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
@@ -45,16 +45,20 @@
             break;
         }
     }
-    DateTime today = DateTime.Today;
-    DateTime fechaUlt = ((DateTime)funcion.FechaDevolucion).AddDays((int)funcion.cantDiasDevolucion);
     int sePuedeDev = 0;
-    if (DateTime.Compare(today, fechaUlt) < 0 &&
-        DateTime.Compare(today, (DateTime)funcion.FechaDevolucion) > 0) { sePuedeDev = 1; }
+    DateTime today = DateTime.Today;
+    if (funcion.estado == "CANCELADO")
+    {
         
-    
-    
-    
-    
+        DateTime fechaUlt = ((DateTime)funcion.FechaDevolucion).AddDays((int)funcion.cantDiasDevolucion);
+        if (DateTime.Compare(today, fechaUlt) <= 0 &&
+            DateTime.Compare(today, (DateTime)funcion.FechaDevolucion) >= 0) { sePuedeDev = 1; }
+    }
+    else//POSTERGADO
+    {
+        if (DateTime.Compare(today, (DateTime)funcion.FechaDevolucion) <= 0)
+            sePuedeDev = 1;
+    }        
 }
 
 <div class="container">
@@ -70,18 +74,33 @@
             <input id="eventoN" type="text" class="form-control" value="@funcion.estado" disabled>
         </div>
     </div>
-    <div class="row form-group">
-        <label for="idEvento" class="control-label col-md-2">Fecha de Devolución:</label>
-        <div class="col-md-10">
-            <input id="eventoN" type="text" class="form-control" value="@funcion.FechaDevolucion" disabled>
-        </div>
-    </div>
-    <div class="row form-group">
-        <label for="idEvento" class="control-label col-md-2">Días hábiles para Devolución:</label>
-        <div class="col-md-10">
-            <input id="eventoN" type="text" class="form-control" value="@funcion.cantDiasDevolucion" disabled>
-        </div>
-    </div>
+    @{
+        if (funcion.estado == "CANCELADO")
+        {
+            <div class="row form-group">
+                <label for="idEvento" class="control-label col-md-2">Fecha Inicio de Devolución:</label>
+                <div class="col-md-10">
+                    <input id="eventoN" type="text" class="form-control" value="@funcion.FechaDevolucion" disabled>
+                </div>
+            </div>
+            <div class="row form-group">
+                <label for="idEvento" class="control-label col-md-2">Días hábiles para Devolución:</label>
+                <div class="col-md-10">
+                    <input id="eventoN" type="text" class="form-control" value="@funcion.cantDiasDevolucion" disabled>
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="row form-group">
+                <label for="idEvento" class="control-label col-md-2">Fecha hasta Devolución:</label>
+                <div class="col-md-10">
+                    <input id="eventoN" type="text" class="form-control" value="@funcion.FechaDevolucion" disabled>
+                </div>
+            </div>
+        }
+}
+    
     <div class="row form-group">
         <label for="idEvento" class="control-label col-md-2">Cantidad de entradas:</label>
         <div class="col-md-10">
@@ -134,10 +153,10 @@
             </thead>
             <tbody id="tbody">
                 @{
-            if (axf != null)
-            {
-                foreach (var row in axf)
-                {
+                    if (axf != null)
+                    {
+                        foreach (var row in axf)
+                        {
                             <tr id=@row.codAsiento onclick="myFunction(this)">
                                 <td>@row.codAsiento</td>
                                 <td>@row.codFuncion</td>
@@ -147,8 +166,8 @@
                                 <td>@row.DocAsociado</td>
                                 <td>@row.PrecioPagado</td>
                             </tr>
-                }
-            }
+                        }
+                    }
                 }
             </tbody>
         </table>
