--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -119,7 +119,7 @@
                         }
                         else
                         {
-                            if (ViewBag.EventoNoDisponible != null && codperfilActual!=3 )
+                            if (ViewBag.EventoNoDisponible != null && codperfilActual != 3)
                             {
                                 <p>@ViewBag.EventoNoDisponible</p>
                                 List<string> futurasVentas = ViewBag.FuturasVentas as List<string>;
@@ -140,90 +140,97 @@
                                 }
                                 else
                                 {
+                                    if (ViewBag.ListFunciones.Count == 0)
+                                    {
+                                        <p>Ya no hay funciones para este evento</p>
 
-                                    <!--div class="row form-group">
-                                        <label for="funcion" class="control-label col-md-4">Función:</label>
-                                        <div id="funcion" class="col-md-8">
-                                            <select class="form-control">
-                                                <option>Seleccione</option>
-                                                <option>12/10/15</option>
-                                                <option>15/10/15</option>
-                                            </select>
+                                    }
+                                    else
+                                    {
+                                        <!--div class="row form-group">
+                                            <label for="funcion" class="control-label col-md-4">Función:</label>
+                                            <div id="funcion" class="col-md-8">
+                                                <select class="form-control">
+                                                    <option>Seleccione</option>
+                                                    <option>12/10/15</option>
+                                                    <option>15/10/15</option>
+                                                </select>
+                                            </div>
+                                        </div-->
+                                        <div class="row form-group">
+                                            <label for="hora" class="control-label col-md-4">Funciones:</label>
+                                            <div id="funcion" class="col-md-8">
+                                                <select id="funcionHora" class="form-control">
+                                                    @for (int i = 0; i < ViewBag.ListFunciones.Count; i++)
+                                                    {
+                                                        string fecha = String.Format("{0:d}", ViewBag.ListFunciones[i].fecha);
+                                                        string hora = String.Format("{0:t}", ViewBag.ListFunciones[i].horaIni);
+                                                        <option value="@ViewBag.ListFunciones[i].codFuncion"> @fecha - @hora</option>
+                                                    }
+                                                </select>
+                                                @Html.ValidationMessageFor(model => model.idFuncion)
+                                            </div>
                                         </div>
-                                    </div-->
-                                    <div class="row form-group">
-                                        <label for="hora" class="control-label col-md-4">Funciones:</label>
-                                        <div id="funcion" class="col-md-8">
-                                            <select id="funcionHora" class="form-control">
-                                                @for (int i = 0; i < ViewBag.ListFunciones.Count; i++)
-                                                {
-                                                    string fecha = String.Format("{0:d}", ViewBag.ListFunciones[i].fecha);
-                                                    string hora = String.Format("{0:t}", ViewBag.ListFunciones[i].horaIni);
-                                                    <option value="@ViewBag.ListFunciones[i].codFuncion"> @fecha - @hora</option>
-                                                }
-                                            </select>
-                                            @Html.ValidationMessageFor(model => model.idFuncion)
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <label for="zonaTarifa" class="control-label col-md-4">Zona/Tarifa:</label>
-                                        <div id="funcion" class="col-md-8">
+                                        <div class="row form-group">
+                                            <label for="zonaTarifa" class="control-label col-md-4">Zona/Tarifa:</label>
+                                            <div id="funcion" class="col-md-8">
 
-                                            <select id="zonaTarifa" class="form-control">
-                                                @for (int i = 0; i < ViewBag.ListZonasNombre.Count; i++)
-                                                {
-                                                    <option value="@ViewBag.ListZonasId[i]"> @ViewBag.ListZonasNombre[i]</option>
-                                                }
-                                            </select>
-                                            @Html.ValidationMessageFor(model => model.idZona)
-
-                                        </div>
-                                    </div>
-                                    <div class="row form-group">
-                                        <label for="zonaTarifa" class="control-label col-md-4">Cantidad entradas:</label>
-                                        <div class="col-md-4">
-                                            <input id="numEntradas" class="form-control" type="number" value="0">
-                                        </div>
-                                        @TempData["ErrorSeleccionandoAsientos"]
-                                        @Html.ValidationMessageFor(model => model.cantEntradas)
-                                    </div>
-                                    <div class="row form-group">
-
-                                        @using (Html.BeginForm("Entradas", "Evento", FormMethod.Post, new { id = "submitEntradas" }))
-                                        {
-
-                                            @Html.TextBoxFor(Model => Model.idZona, new { style = "display:none" })
-                                            @Html.TextBoxFor(Model => Model.idFuncion, new { style = "display:none" })
-                                            @Html.TextBoxFor(model => model.idEvento, new { style = "display:none" })
-                                            @Html.TextBoxFor(model => model.tieneAsientos, new { id = "formTieneEntradas", style = "display:none" })
-                                            @Html.TextBoxFor(model => model.cantEntradas, new { id = "formCantEntradas", style = "display:none" })
-                                            <div id="asientosElegidos">
+                                                <select id="zonaTarifa" class="form-control">
+                                                    @for (int i = 0; i < ViewBag.ListZonasNombre.Count; i++)
+                                                    {
+                                                        <option value="@ViewBag.ListZonasId[i]"> @ViewBag.ListZonasNombre[i]</option>
+                                                    }
+                                                </select>
+                                                @Html.ValidationMessageFor(model => model.idZona)
 
                                             </div>
-                                                
-                                            if (codperfilActual <= 2  )
+                                        </div>
+                                        <div class="row form-group">
+                                            <label for="zonaTarifa" class="control-label col-md-4">Cantidad entradas:</label>
+                                            <div class="col-md-4">
+                                                <input id="numEntradas" class="form-control" type="number" value="0">
+                                            </div>
+                                            @TempData["ErrorSeleccionandoAsientos"]
+                                            @Html.ValidationMessageFor(model => model.cantEntradas)
+                                        </div>
+                                        <div class="row form-group">
+
+                                            @using (Html.BeginForm("Entradas", "Evento", FormMethod.Post, new { id = "submitEntradas" }))
                                             {
-                                                <div class="col-md-6">
-                                                    <button type="submit" name="boton" value="carrito" class="btn btn-success pull-right ">Agregar al carrito <span class="glyphicon glyphicon-shopping-cart"></span></button>
+
+                                                @Html.TextBoxFor(Model => Model.idZona, new { style = "display:none" })
+                                                @Html.TextBoxFor(Model => Model.idFuncion, new { style = "display:none" })
+                                                @Html.TextBoxFor(model => model.idEvento, new { style = "display:none" })
+                                                @Html.TextBoxFor(model => model.tieneAsientos, new { id = "formTieneEntradas", style = "display:none" })
+                                                @Html.TextBoxFor(model => model.cantEntradas, new { id = "formCantEntradas", style = "display:none" })
+                                                <div id="asientosElegidos">
+
                                                 </div>
-                                            }
-                                            if (codperfilActual == 1)
-                                            {
-                                                <div class="col-md-6">
-                                                    <button type="submit" name="boton" value="reservar" class="btn btn-primary pull-right">Reservar <span class="glyphicon glyphicon-save"></span></button>
-                                                </div>
-                                            }
-                                            if (codperfilActual == 3)
-                                            {
-                                                <div class="col-md-6">
-                                                    <button type="submit" name="boton" value="reservarOrganizador" class="btn btn-primary pull-right">Reservar Organizador<span class="glyphicon glyphicon-save"></span></button>
-                                                </div>
-                                            }
+
+                                                if (codperfilActual <= 2)
+                                                {
+                                                    <div class="col-md-6">
+                                                        <button type="submit" name="boton" value="carrito" class="btn btn-success pull-right ">Agregar al carrito <span class="glyphicon glyphicon-shopping-cart"></span></button>
+                                                    </div>
+                                                }
+                                                if (codperfilActual == 1)
+                                                {
+                                                    <div class="col-md-6">
+                                                        <button type="submit" name="boton" value="reservar" class="btn btn-primary pull-right">Reservar <span class="glyphicon glyphicon-save"></span></button>
+                                                    </div>
+                                                }
+                                                if (codperfilActual == 3)
+                                                {
+                                                    <div class="col-md-6">
+                                                        <button type="submit" name="boton" value="reservarOrganizador" class="btn btn-primary pull-right">Reservar Organizador<span class="glyphicon glyphicon-save"></span></button>
+                                                    </div>
+                                                }
 
                                             }
-                                    </div>
+
+                                        </div>
+                                    }
                                 }
-
 
                             }
                         }
@@ -419,8 +426,8 @@
                 //$("#filas").val(cantFilas);
                 //$("#columnas").val(cantColumnas);
 
-                
-                $("#formTieneEntradas").val(""+listaAsientos[index].tieneAsientos);
+
+                $("#formTieneEntradas").val("" + listaAsientos[index].tieneAsientos);
                 $("#formTieneEntradas").attr("value", listaAsientos[index].tieneAsientos);
                 $("#numEntradas").val(0);
                 $("#numEntradas").prop('disabled', true);
@@ -432,7 +439,7 @@
                 $("#aux").empty();
                 if (index >= 0) {
                     $("#numEntradas").prop('disabled', false);
-                    $("#formTieneEntradas").val(""+listaAsientos[index].tieneAsientos);
+                    $("#formTieneEntradas").val("" + listaAsientos[index].tieneAsientos);
                     $("#formTieneEntradas").attr("value", listaAsientos[index].tieneAsientos);
 
                     $('<div><h3>Quedan ' + listaAsientos[index].totalLibres + ' asientos</h3> </div>').appendTo('#canvas');
